src/test/deca/context/invalid/SansObjet/DeclVar-GE-string-float-int.deca
// Description:
//    Declaration of a string variable using >= operation between a float variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  3.14; 
    int y = 17; 
    string z = 3.14 >= 17; 
}
